# routes/api.php
@@ -15,5 +15,8 @@ Route::middleware('auth:sanctum')->group(function () {
         return $request->user();
     });
     Route::post('rent', [RentalController::class, 'rentCar']);
+    Route::post('checkout', [PaymentController::class, 'checkout']);
+    Route::post('index', [PaymentController::class, 'index'])->name('index');
+    Route::get('success', [PaymentController::class, 'checkout'])->name('success');
     Route::post('pay', [PaymentController::class, 'buyCar']);
 });
